// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination default render (empty) 1`] = `null`;

exports[`Pagination should render 1 page out of 3 1`] = `
<ul
  className="pagination justify-content-center"
>
  <li
    className="page-item disabled"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link",
  "to": "/"
}
      Previous
    </div>
  </li>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 1,
  "active": true,
  "prefixer": null
}
  </div>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 2,
  "active": false,
  "prefixer": null
}
  </div>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 3,
  "active": false,
  "prefixer": null
}
  </div>
  <li
    className="page-item"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link",
  "to": "/2"
}
      Next
    </div>
  </li>
</ul>
`;

exports[`Pagination should render 3 page out of 3 1`] = `
<ul
  className="pagination justify-content-center"
>
  <li
    className="page-item"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link",
  "to": "/2"
}
      Previous
    </div>
  </li>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 1,
  "active": false,
  "prefixer": null
}
  </div>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 2,
  "active": false,
  "prefixer": null
}
  </div>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 3,
  "active": true,
  "prefixer": null
}
  </div>
  <li
    className="page-item disabled"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link",
  "to": "/4"
}
      Next
    </div>
  </li>
</ul>
`;

exports[`Pagination should render with prefix 1`] = `
<ul
  className="pagination justify-content-center"
>
  <li
    className="page-item disabled"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link",
  "to": "test-path/"
}
      Previous
    </div>
  </li>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 1,
  "active": true
}
  </div>
  <div
    data-mock="PaginationNumItem"
  >
    {
  "pageNum": 2,
  "active": false
}
  </div>
  <li
    className="page-item"
  >
    <div
      data-mock="Link"
    >
      {
  "className": "page-link",
  "to": "test-path/2"
}
      Next
    </div>
  </li>
</ul>
`;
